--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+
+  "lint-staged": {
+    "*": "pnpm lint"
+
   }
 }
