--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.25.1",
+    "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
@@ -30,9 +31,7 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   },
-
   "lint-staged": {
     "*": "pnpm lint"
-
   }
 }
